# generated-pyharp

./: .gitignore  LICENSE  README.md  core.yml  mkdocs.yml  pyproject.toml  run_docs.ps1  run_docs.sh
.github/workflows/: build-docs.yml
Generators/: Generators.csproj
docs/api/: protocol.md  serial.md
docs/examples/: index.md
docs/examples/get_info/: get_info.md  get_info.py
docs/examples/read_and_write_from_registers/: read_and_write_from_registers.md  read_and_write_from_registers.py
docs/stylesheets/: extra.css
scripts/: _harp_io.py  benchmark_common.py  benchmark_message.py  benchmark_timeit.py  generate_dump.py  profile_complex.py  profile_message.py  profile_message_complex.py
src/harp-benchmarks/: pyproject.toml
src/harp-benchmarks/harp/benchmarks/: _registers.py  benchmark.py  compare.py  generate.py  register_models.py
src/harp-data/: README.md  pyproject.toml
src/harp-data/harp/data/: __init__.py  harp_data.py
src/harp-protocol/: pyproject.toml
src/harp-protocol/harp/protocol/: __init__.py  base.py  exceptions.py  message.py  registers.py  utils.py
src/harp-serial/: README.md  pyproject.toml
src/harp-serial/harp/serial/: __init__.py  device.py  harp_serial.py
tests/: test_benchmark_registers.py  test_decoded_columns.py  test_device.py  test_heterogeneous_payloads.py  test_homogeneous_payloads.py  test_interface_type.py  test_masked_struct.py  test_messages.py  test_registers.py
