[project]
name = "pyharp"
version = "0.4.0"
description = "Library for data acquisition and control of devices implementing the Harp protocol."
authors = [{ name= "Hardware and Software Platform, Champalimaud Foundation", email="software@research.fchampalimaud.org"}]
license = "MIT"
readme = 'README.md'
keywords = ['python', 'harp']
requires-python = ">=3.10,<4.0"
dependencies = [
    "harp-data",
    "harp-protocol",
    "harp-serial",
    "pandas>=3.0.3",
]

[project.urls]
Repository = "https://github.com/fchampalimaud/pyharp/"
"Bug Tracker" = "https://github.com/fchampalimaud/pyharp/issues"
Documentation = "https://fchampalimaud.github.io/pyharp/"

[tool.uv.sources]
harp-protocol = { workspace = true }
harp-serial = { workspace = true }
harp-data = { workspace = true }
harp-benchmarks = { workspace = true }

[tool.uv.workspace]
members = [
    "src/*",
]

[dependency-groups]
docs = [
    "griffe-fieldz>=0.2.1",
    "mkdocs>=1.6.1",
    "mkdocs-codeinclude-plugin>=0.2.1",
    "mkdocs-git-authors-plugin>=0.9.4",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-material>=9.6.9",
    "mkdocs-monorepo-plugin>=1.1.2",
    "mkdocstrings-python>=1.16.6",
]

dev = [
    "harp-benchmarks",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.0",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--import-mode=importlib", ]
python_files = [
    "tests.py",
    "test_*.py"
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
